Fixes most warnings in classes in lanaseq's base package.