@@ -1,11 +1,10 @@
 package ca.qc.ircm.lanaseq;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 
 import ca.qc.ircm.lanaseq.test.config.ServiceTestAnnotations;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.commons.io.FilenameUtils;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -21,11 +20,10 @@ public class MessageSourceTest {
 
   @Test
   public void configuration() {
-    assertTrue(messageSource instanceof ReloadableResourceBundleMessageSource);
+    assertInstanceOf(ReloadableResourceBundleMessageSource.class, messageSource);
     ReloadableResourceBundleMessageSource reloadableMessageSource =
         (ReloadableResourceBundleMessageSource) messageSource;
-    List<String> basenames =
-        reloadableMessageSource.getBasenameSet().stream().collect(Collectors.toList());
+    List<String> basenames = reloadableMessageSource.getBasenameSet().stream().toList();
     assertEquals(2, basenames.size());
     String currentDir = FilenameUtils.separatorsToUnix(System.getProperty("user.dir"));
     assertEquals("file:" + currentDir + "/messages", basenames.get(0));
